--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,21 @@
         android:theme="@style/Theme.PartyFinder"
         tools:targetApi="31">
         <activity
+            android:name=".ui.theme.TF"
+            android:exported="false"
+            android:label="@string/title_activity_tf"
+            android:theme="@style/Theme.PartyFinder" />
+        <activity
+            android:name=".SignUp"
+            android:exported="false"
+            android:label="@string/title_activity_sign_up"
+            android:theme="@style/Theme.PartyFinder" />
+        <activity
+            android:name=".SingUp"
+            android:exported="false"
+            android:label="@string/title_activity_sing_up"
+            android:theme="@style/Theme.PartyFinder" />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
